# Validators

./: pyproject.toml
src/: validators.py
src/transfero_validators/: exceptions.py  validators.py
tests/: test_celularvalidator.py  test_cpfvalidator.py  test_emailvalidator.py  test_senhavalidator.py  tests_emailvalidator.py
tests/exceptions/: custom_test_exception.py
