[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "transfero_validators"
version = "0.0.2"
authors = [{ name="Gabriel Aureo", email="gabrielaureo@gmail.com" }]
description = "A small CRUD validators package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GabrielAureo/Validators"
"Bug Tracker" = "https://github.com/GabrielAureo/Validators/issues"